--- a/semana10/labex/package.json
+++ b/semana10/labex/package.json
@@ -10,6 +10,7 @@
     "from": "^0.1.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled": "^1.0.0",
     "styled-components": "^5.3.0",
