--- a/semana17/labenuSystem/package.json
+++ b/semana17/labenuSystem/package.json
@@ -10,9 +10,12 @@
     "mysql": "^2.18.1",
     "typescript": "^4.3.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.4.3"
+  },
   "scripts": {
-		"start": "tsc && node ./build/index.js",
+    "start": "tsc && node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
