--- a/semana18/projeto-LabeCommerce/package.json
+++ b/semana18/projeto-LabeCommerce/package.json
@@ -17,12 +17,14 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.9",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.4.11",
+    "@types/uuid": "^8.3.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   }
