Endpoints mínimos criados

--- a/semana19/cookenu/package.json
+++ b/semana19/cookenu/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev ./src/index.ts",
-    "start": "tsc && node ./build/index.js"
+    "start": "tsc && node ./build/index.js",
+    "migrations": "tsc && node ./build/migrations/index.js"
   },
   "keywords": [],
   "author": "",
