--- a/semana22/stolen-bike/package.json
+++ b/semana22/stolen-bike/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "eslint": "^7.32.0",
+    "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
